--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+  },
+   "babel": {
+     "plugins":    ["@babel/plugin-proposal-private-property-in-object"]
+
     ]
   }
 }
