--- a/package.json
+++ b/package.json
@@ -34,9 +34,12 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21>
-    "@babel/plugin-transform-private-property-in-object": "^7.2>
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
+    "@babel/plugin-transform-private-property-in-object": "^7.21.0",
     "eslint": "^8.57.1",
     "eslint-config-react-app": "^7.0.1"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
